[package]
name = "lru-st"
version = "0.1.1"
edition = "2021"
description = "A package providing a Vec based doubly linked list implementation and related data structures"
license-file = "LICENSE"
repository = "https://github.com/qjerome/lru-st"
readme = "README.md"
keywords = ["data-structure", "doubly-linked-list", "lru-hashmap", "lru"]
documentation = "https://docs.rs/lru-st"

[features]
# feature providing thread safety
sync = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
